Testing/Data/GMV/invalid/polygonal.mesh.definition.too.short.ascii.gmv.sha512
df1aabe935c4253da714503ceec8e765be5119f55bbfa88359227fc63db83552f7efba4769cb4774a41fc107d356e5984b57e64d51310e184a0724045016d328
